Fix labels switching to text-align=left when resizing edit ticket form. Kept that feature in login form

--- a/src/main/webapp/public/css/tt.css
+++ b/src/main/webapp/public/css/tt.css
@@ -215,7 +215,7 @@ textarea {
 
 /*tablet*/
 @media (max-width: 991px) and (min-width: 768px) {
-	.form-horizontal .control-label { /*make "username" and "password" labels aligned to the left and reduce padding between form elements*/
+	#login-form .form-horizontal .control-label { /*make "username" and "password" labels aligned to the left and reduce padding between form elements*/
 		text-align: left;
 		padding-top: 0;
 	}
